# crazyflie-imo

./: .gitmodules  README.md  setup.py
config/: crazyflies_mocap.yaml  crazyflies_opticalflow.yaml  crazyflies_opticalflow_multi.yaml  motion_capture.yaml
crazyflie_test/: hello_world.py  multi_opticalflow.py  package.xml  setup.py
crazyflie_test/config/: crazyflies_mocap.yaml  motion_capture.yaml
crazyflie_test/crazyflie_test/: figure8.py  figure8_traj.py  goto_square.py
crazyflie_test/launch/: launch.py
crazyflie_test/scripts/: bag_to_csv.py
