<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crazyflie_test</name>
  <version>0.0.1</version>
  <description>Crazyswarm2 기반 Crazyflie 비행 테스트 패키지</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>

  <depend>crazyflie</depend>
  <depend>crazyflie_py</depend>
  <depend>crazyflie_interfaces</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
